<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/frndwal"
android:padding="25dp"
    tools:context=".Activities.BestieActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/shojumaru"
            android:text="@string/bestie"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:textSize="40sp"
            android:transitionName="transition_title_text" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/takenImg"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/uploadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:textColor="@color/white"
            android:text="@string/takenImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <android.support.design.widget.TextInputLayout
            android:id="@+id/petNameLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/petNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_person_white_32dp"
                android:drawablePadding="10dp"
                android:hint="@string/petname"
                android:maxLength="25"
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/favoriColorLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/favoriColorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_color_lens_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/favoriColor"
                android:maxLength="15"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/addicitionLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addicitionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_gamepad_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="25"
                android:hint="@string/addicition"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/CurrentcrushLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/CurrentcrushId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_sentiment_very_satisfied_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/Currentcrush"
                android:maxLength="25"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/laughLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/laughId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_sentiment_very_satisfied_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="35"
                android:hint="@string/laugh"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/annoyLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/annoyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_mood_bad_black_24dp"
                android:drawablePadding="10dp"
                android:maxLength="35"
                android:hint="@string/annoy"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/zoadicLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/zoadicId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_star_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/zoadic"
                android:maxLength="15"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/hobbiesLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hobbiesId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_pool_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/hobbies"
                android:maxLength="15"
                android:inputType="text"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/crazyLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/crazyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_hot_tub_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/crazy"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
        android:id="@+id/MovieLytId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/MovieId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_movie_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/Movie"
            android:maxLength="15"
            android:inputType="text"
            android:textColor="@color/colorBlack" />
    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/buyLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/buyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_exposure_plus_1_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/buy"
                android:inputType="text"
                android:maxLength="45"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/memoryLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/memoryId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_memory_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/memory"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sportLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sportId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_directions_bike_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/sport"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/songLytId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/songId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_music_video_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/song"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">


    <Button
        android:id="@+id/slamsubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/slamcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        />

</LinearLayout>



    </LinearLayout>

</LinearLayout>


</ScrollView>