<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meditate"
    tools:context=".Activities.AboutMEActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_8sdp"
       android:layout_marginLeft="@dimen/_4sdp"
       android:layout_marginRight="@dimen/_4sdp"
       android:layout_marginBottom="@dimen/_8sdp"
       android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:textColor="@color/fbutton_color_peter_river"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/shojumaru"
        android:text="@string/aboutText" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:textColor="@color/fbutton_color_peter_river"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/shojumaru"
        android:text="@string/developerText" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:layout_marginBottom="6dp"
           android:layout_marginRight="6dp"
           android:layout_marginLeft="6dp"
           android:textColor="@color/fbutton_color_peter_river"
           android:textSize="@dimen/_15sdp"
           android:fontFamily="@font/shojumaru"
           android:text="@string/thanks" />

       <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="6dp"
           android:layout_marginBottom="6dp"
           android:layout_marginRight="6dp"
           android:layout_marginLeft="6dp"
           android:textColor="@color/fbutton_color_peter_river"
           android:textSize="@dimen/_15sdp"
           android:fontFamily="@font/shojumaru"
           android:text="@string/queries" />
       <TextView
           android:id="@+id/textView6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="0dp"
           android:layout_marginBottom="6dp"
           android:layout_marginRight="6dp"
           android:layout_marginLeft="6dp"
           android:textColor="@color/red"
           android:textSize="@dimen/_20sdp"
           android:fontFamily="@font/wendy_one"
           android:text="@string/mailMsg" />


   </LinearLayout>

</ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"

        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradientcolor">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/headertitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/footerText"
                    android:textAlignment="center"
                    android:textColor="@color/white_color"
                    android:fontFamily="@font/berkshire_swash"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>