<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/pageHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/userDtls"
                android:textColor="@color/MainColor"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/regUserIdLyt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pageHeader"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/regUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/passwordstyle"
                    android:drawablePadding="10dp"
                    android:hint="@string/regNameMand"
                    android:maxLength="35"
                    android:inputType="textCapCharacters"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/pwdLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regUserIdLyt">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pwdLayoutId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/regPwdId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:hint="@string/userpasswordMand"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repwdLayoutId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwdLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rePwdId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/userRepasswordMand"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/regAreaLytId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repwdLayoutId">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/regAreaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_airport_shuttle_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/area"
                    android:inputType="text"
                    android:textColor="@color/colorBlack" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/regemailLytId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regAreaLytId">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/regEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textColor="@color/colorBlack" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/regsubmit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/Submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="@font/yatra_one"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regemailLytId" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/Cancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:fontFamily="@font/yatra_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toEndOf="@+id/regsubmit"
                app:layout_constraintTop_toTopOf="@+id/regsubmit" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</LinearLayout>